--- a/main/main.css
+++ b/main/main.css
@@ -53,7 +53,7 @@ body footer .container h3 {
 }
 body footer .d-flex {
   width: 100%;
-  padding: 20px 0;
+  padding: 20px 20px;
   margin: 0 auto;
   background-color: #0a0756;
 }
@@ -262,13 +262,13 @@ nav.navbar .container {
 }
 
 .bloque1 {
-  order: 1;
+  order: 2;
   margin-top: 40px;
   margin-bottom: 50px;
 }
 
 .bloque2 {
-  order: 2;
+  order: 1;
 }
 
 .feature-image {
@@ -384,6 +384,12 @@ footer form .btn {
   }
   body .feature-flex-content h3 {
     text-align: left;
+  }
+  .bloque1 {
+    order: 1;
+  }
+  .bloque2 {
+    order: 2;
   }
   #featureTabs {
     border-bottom: 1px solid #ccc;
